# indian-pincode

./: .gitignore  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
src/go/: go.mod  indian_pincode.go  indian_pincode_test.go
src/go/data/: districts.json
src/go/data/details/: 123.json  124.json  132.json  136.json  141.json  146.json  148.json  151.json  152.json  160.json  171.json  172.json  180.json  204.json  205.json  209.json  223.json  225.json  227.json  233.json  242.json  247.json  271.json  277.json  282.json  285.json  301.json  304.json  311.json  314.json  321.json  324.json  326.json  327.json  328.json  332.json  333.json  334.json  335.json  344.json  (+98 more)
src/node/: README.md  index.js  package.json  test.js
src/node/data/: geo.json
src/node/data/details/: 122.json  127.json  133.json  134.json  135.json  140.json  142.json  145.json  173.json  175.json  177.json  181.json  182.json  184.json  202.json  203.json  207.json  208.json  210.json  211.json  222.json  226.json  231.json  241.json  243.json  249.json  250.json  251.json  263.json  272.json  273.json  274.json  275.json  281.json  302.json  307.json  312.json  313.json  323.json  325.json  (+93 more)
src/python/indian_pincode/: __init__.py
src/python/indian_pincode/data/: pincodes.compressed.json
src/python/indian_pincode/data/details/: 110.json  121.json  125.json  126.json  131.json  143.json  144.json  147.json  174.json  176.json  185.json  190.json  191.json  192.json  193.json  194.json  201.json  (+117 more)
tests/: test_python_lib.py
